RESOLVED FIXED157954
[Cocoa] REGRESSION(r184899): Ascent adjustments are applied to web fonts
https://bugs.webkit.org/show_bug.cgi?id=157954
Summary [Cocoa] REGRESSION(r184899): Ascent adjustments are applied to web fonts
Myles C. Maxfield
Reported 2016-05-20 12:59:14 PDT
REGRESSION(r184899): Ascent adjustments are applied to web fonts
Attachments
Patch (263.27 KB, patch)
2016-05-20 13:02 PDT, Myles C. Maxfield
no flags
Patch (6.03 KB, patch)
2016-05-20 15:02 PDT, Myles C. Maxfield
dino: review+
Myles C. Maxfield
Comment 1 2016-05-20 13:02:20 PDT
Myles C. Maxfield
Comment 2 2016-05-20 13:03:00 PDT
Dean Jackson
Comment 3 2016-05-20 13:15:59 PDT
Comment on attachment 279498 [details] Patch I don't think we can commit this font file to Open Source. We don't have a license for it. Can we use something else?
Myles C. Maxfield
Comment 4 2016-05-20 15:02:25 PDT
Dean Jackson
Comment 5 2016-05-20 15:05:16 PDT
Comment on attachment 279504 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279504&action=review > LayoutTests/fast/text/resources/Helvetica_light.svg:6 > +<font id="Litherum" horiz-adv-x="1024"> How is this working if the id is Litherum? and the family you use below is "Helvetica".
Myles C. Maxfield
Comment 6 2016-05-20 15:06:43 PDT
Comment on attachment 279504 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279504&action=review >> LayoutTests/fast/text/resources/Helvetica_light.svg:6 >> +<font id="Litherum" horiz-adv-x="1024"> > > How is this working if the id is Litherum? and the family you use below is "Helvetica". The @font-face block doesn't list a fragment identifier, so it will just use the first (or last, I can't remember) font in the file. The font-family below is what the SVG -> OTF converter uses to embed the family name inside the font (and is necessary to trigger the ascent adjustment).
Dean Jackson
Comment 7 2016-05-20 15:07:02 PDT
Comment on attachment 279504 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=279504&action=review >> LayoutTests/fast/text/resources/Helvetica_light.svg:6 >> +<font id="Litherum" horiz-adv-x="1024"> > > How is this working if the id is Litherum? and the family you use below is "Helvetica". You should at least remove this id. > LayoutTests/fast/text/resources/Helvetica_light.svg:7 > +<font-face units-per-em="2048" ascent="1577" descent="-471" font-family="Helvetica"/> And change the family name.
Myles C. Maxfield
Comment 8 2016-05-20 15:09:58 PDT
Note You need to log in before you can comment on or make changes to this bug.