[Cocoa] REGRESSION(r184899): Ascent adjustments are applied to web fonts https://bugs.webkit.org/show_bug.cgi?id=157954 <rdar://problem/24204349>

Reviewed by Dean Jackson.

Source/WebCore:

There are a few specific fonts which exist on Windows and Cocoa OSes, and we will adjust
the ascents of these fonts to better match their counterparts on Windows. However, in
r184899, we started applying this adjustment to web fonts too.

Test: fast/text/ascent-adjustment-webfont.html

* platform/graphics/cocoa/FontCocoa.mm:
(WebCore::Font::platformInit):
* svg/SVGToOTFFontConversion.cpp: We were reporting the length of font names wrong, so
it made the test pass without this patch even when it shouldn't have. Previously, we
were recording the number of characters in the font, not the number of bytes (each
character is 2 bytes).

LayoutTests:

* fast/text/ascent-adjustment-webfont-expected-mismatch.html: Added.
* fast/text/ascent-adjustment-webfont.html: Added.
* fast/text/resources/Helvetica-light.svg: Added.

Canonical link: https://commits.webkit.org/176070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201228 268f45cc-cd09-0410-ab3c-d52691b4dbfc